# Reinforcement-learning-snake

./: .gitignore  Pipfile  config.yml  pyproject.toml
src/: __main__.py  config.py  interface.py  log.py  utils.py
src/environment/: apple.py  environment.py  snake.py
